--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "PT Sans";
+  src: local("PTSans-Bold"),
+   url("./fonts/PTSans-Bold.ttf") format("truetype");
+  font-weight: bold;
+ }
+
+ @font-face {
+  font-family: "PT Sans";
+  src: local("PTSans-Regular"),
+   url("./fonts/PTSans-Regular.ttf") format("truetype");
+  font-weight: regular;
+ }
+
+ 
