--- a/src/components/CircleMenu/CircleMenu.css
+++ b/src/components/CircleMenu/CircleMenu.css
@@ -1,5 +1,7 @@
 .circle-menu {
-    position: relative;
+    position: absolute;
+    left: 452px;
+    top: 215px;
     width: 536px;
     height: 536px;
     border-radius: 50%;
@@ -13,8 +15,8 @@
 
   .circle-years {
     position: absolute;
-    top: 265px;
-    left: 220px;
+    top: 185px;
+    left: 217px;
     display: flex;
     flex-direction: row;
     gap: 100px;
@@ -29,7 +31,7 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #9DBEFD;
+    color: #5d5fef;
 
   }
 
@@ -57,6 +59,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
   }
   
   .menu-item::before {
@@ -69,29 +72,43 @@
     white-space: nowrap;
     background-color: none;
     color: #42567A;
-    top: -5px;
-    padding-left: 5px;
+    top: -2px;
+    padding-left: 4px;
     font-family: PT Sans;
-    font-size: 6px;
+    font-size: 4px;
     font-weight: 700;
     line-height: 10px;
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     transform: none;
+    color: #42567A;
   }
+
   
   .menu-item.selected::before,
   .menu-item:hover::before {
-    display: inline-block;
+      display: inline-block;
   }
   
   .menu-item:hover,
   .menu-item.selected {
-    transform: scale(300%);
-    background-color: #FFFFFF;
-    border: 1px solid #303E5880;
+      background-color: #FFFFFF;
+
+      border-radius: 50%;
+      transform: scale(500%); 
+      box-shadow: 0 0 1px #303E5880; 
   }
+
+  .menu-item-index {
+    font-size: 2.5px;
+    font-weight: 500;
+    color: #42567A;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+}
   
   .active-label {
     position: absolute;
