--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,14 +1,15 @@
 .slider {
+    position: absolute;
+    top: 841px;
+    left: 80px;
     display: block;
     max-width: 1280px;
-    margin-left: 40px;
-    margin-right: 40px;
     justify-self: center;
     overflow: visible;
 }
 
 .slider-content {
-    padding-top: 56px;
+   
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -43,7 +44,6 @@
 
 .swiper-button-prev,
 .swiper-button-next {
-  
   color: #3877EE; 
   background-color: #FFFFFF; 
   border-radius: 50%; 
@@ -56,16 +56,16 @@
 
   .swiper-button-prev::after,
  .swiper-button-next::after{
-     font-size: 10px;
+     font-size: 12px;
  }
 .swiper-button-prev {
     margin-top: 41px;
-    left: 0px;
+    
 }
 
 .swiper-button-next {
     margin-top: 41px;
-    right: 0px;
+
 }
 
 .swiper-button-disabled {
