--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,10 @@ code {
   font-weight: regular;
  }
 
+ @font-face {
+  font-family: "Bebas Neue";
+  src: local("BebasNeue-Regular"),
+   url("./fonts/BebasNeue-Regular.ttf") format("truetype");
+  font-weight: regular;
+ }
  
