--- a/src/components/MainPage/MainPage.scss
+++ b/src/components/MainPage/MainPage.scss
@@ -1,3 +1,5 @@
+@import "./../_variables.scss";
+
 .content {
     border: 1px solid rgb(66, 86, 122, 0.1);
     width: 1440px;
@@ -12,7 +14,7 @@
     left: 0;
     right: 0;
     height: 1px;
-    background-color: #42567A;
+    background-color: $primary-color;
     opacity: 0.1;
     transform: translateY(-50%);
     z-index: 10; 
@@ -25,14 +27,14 @@
     top: 0;
     bottom: 0;
     width: 1px;
-    background-color: #42567A;
+    background-color: $primary-color;
     opacity: 0.1;
     transform: translateX(-50%);
       z-index: 10;  
   }
 
 .main-title-line {
-    background-image: linear-gradient(180deg, #3877EE -5%, #EF5DA8 85%);
+    background-image: linear-gradient(180deg, $slider-decorative-color -5%, $year-end-color 85%);
     width: 5px;  
     height: 100%; 
     
@@ -54,7 +56,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #42567A;
+    color: $primary-color;
 }
 
 .slider-content {
@@ -74,7 +76,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #3877EE;
+    color: $slider-decorative-color;
     margin: 0;
     padding: 0;
 }
@@ -87,7 +89,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #42567A;
+    color: $primary-color;
 }
 
 .swiper-button-disabled {
