--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,3 +1,4 @@
+@import "./../_variables.scss";
 .slider {
     position: absolute;
     top: 841px;
@@ -25,7 +26,7 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #3877EE;
+    color: $slider-decorative-color;
     margin: 0;
     padding: 0;
 }
@@ -38,13 +39,13 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #42567A;
+    color: $primary-color;
 }
 
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: #3877EE; 
+  color: $slider-decorative-color; 
   background-color: #FFFFFF; 
   border-radius: 50%; 
   box-shadow: 0px 0px 15px 0px #3877EE1A;
